re PR c++/21087 (ICE in do_nonmember_using_decl)

gcc/cp/ChangeLog:
PR c++/21087
* name-lookup.c (push_overloaded_decl): Do not overload with
non-duplicate anticipated built-in.
gcc/testsuite/ChangeLog:
PR c++/21087
* g++.dg/lookup/builtin2.C: New test.

From-SVN: r98739